# net_business_analysis

./: .gitignore  LICENSE  README.md  SECURITY.md  main.py  presentation_of_the_indices.json  pyproject.toml  setup.py
.github/workflows/: bandit.yml  codeql.yml  generator-generic-ossf-slsa3-publish.yml  python-package.yml  python_package.yml
Documentation/: README_en.md  args_el.md  args_en.md  func_el.md  modules_el.md  modules_en.md  version_el.md  version_en.md
net_analysis/fundamental_analysis/: activityradios.py  capitalallocation.py  equity_capital.py  financial_leverage.py  grossprofit.py  liquidityradios.py  maintenanceandrepair.py  profitabilityratios.py  total_capital_employed.py
net_analysis/fundamental_analysis/activity_radios/: __init__.py  activityradios.py
net_analysis/fundamental_analysis/activityradios/: activityradios.py
net_analysis/fundamental_analysis/financial_structure_and_viability_radio/: capitalallocation.py
net_analysis/fundamental_analysis/liquidity_radios/: __init__.py  liquidityradios.py
net_analysis/fundamental_analysis/profitability_radios/: __init__.py  grossprofit.py  (+4 more)
net_analysis/setting/: input_arg.py  metadata.py  metadataargs.py  metadatafunc.py  number_output_formatting.py  return_func_error.py
testing/: test_activity_radio.py  test_activityradios.py  test_capsys_validate_numerical_inputs.py  test_equity_capital.py  test_financial_leverage.py  test_grossprofit.py  test_liquidityradios.py  test_maintenanceandrepair.py  test_number_output_formatting.py  test_total_capital_employed.py  test_validate_numerical_inputs.py
