[project]
name = "net_analysis"
version = "v0.3.5_alpha"
description = "A package that aims to cover the analysis of the financial situations of businesses with the help of numerical indicators."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = []



[tool.uv.workspace]
members = ["net_analysis"]



[pytest]
minversion = 8.3.4
pythonpath = net_business_analysis
testpaths = 
    testing

[bandit]
target = net_analysis/
