[project]
name = "net_analysis"
version = "0.3.5a0"
description = "A package that aims to cover the analysis of the financial situations of businesses with the help of numerical indicators."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = []



[pytest]
minversion = "8.3.4"
pythonpath = "net_analysis/"
testpaths = "testing/"

[bandit]
target = "net_analysis/"
